/* 
  Localizable.strings
  TodoApp

  Created by Mike Woodland on 12/22/17.
  Copyright © 2017 Mike Woodland. All rights reserved.
*/

"Add new Task" = "Add new Task";
"Title" = "Title";
"Add" = "Add";
"Cancel" = "Cancel";

"Add new Category" = "Add new Category";
"Name" = "Name";
"Save" = "Save";
"Delete" = "Delete";

