...
        performSegue(withIdentifier: "goToList", sender: self)
        
    }
    
    @IBAction func addButtonPressed(_ sender: UIBarButtonItem) {
        
        let alertContoller = UIAlertController(title: NSLocalizedString("Add New List", comment: ""), message: "", preferredStyle: .alert)
        
        var textField = UITextField()
        
        alertContoller.addTextField { (alertTextField) in
            alertTextField.placeholder = NSLocalizedString("Name", comment: "")
            textField = alertTextField
...
