...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="os8-3t-mEH" id="i0v-dc-vJJ"/>
                            <outlet property="delegate" destination="os8-3t-mEH" id="1vd-dl-6Ck"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Checklists" id="JCk-Lt-t6o">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nNZ-vy-dWD">
                            <connections>
                                <action selector="addButtonPressed:" destination="os8-3t-mEH" id="fAp-sH-gTd"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
